# notes-to-action

./: .gitignore  README.md  TODOS.md
.cursor/rules/: react-typescript.mdc
backend/: asgi.py  manage.py  posthog_client.py  pyproject.toml  settings.py  urls.py  wsgi.py
backend/notes/: admin.py  api.py  models.py  serializers.py
backend/notes/migrations/: 0001_initial.py  0002_initial.py
backend/tasks/: admin.py  api.py  models.py  serializers.py
backend/tasks/migrations/: 0001_initial.py  0002_task_note.py
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py
docs/: PRD.md
docs/UI-design/: README.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppBar.tsx  Card.tsx  MainToolbar.tsx  NoteCard.tsx
frontend/src/components/task/: TaskCard.tsx
frontend/src/pages/: Main.tsx
